<resources>
    <string name="app_name">SimpleNote</string>

    <!-- Welcome Activity-->
    <string name="welcome_message">Jot Down anything you want to achieve, today or in the future</string>
    <string name="started_message">Let\'s Get Started</string>

    <!-- Login Activity-->
    <string name="title_login">Let\'s Login</string>
    <string name="subtitle_login">And notes your idea</string>
    <string name="label_username">Username</string>
    <string name="placeholder_username">Example: @HamifarTaha</string>
    <string name="label_password">Password</string>
    <string name="placeholder_password">********</string>
    <string name="button_login">Login</string>
    <string name="button_account">Don\'t have an account? Register here</string>

    <!-- Signup Activity-->
    <string name="title_signup">Register</string>
    <string name="subtitle_signup">And start taking notes</string>
    <string name="label_firstname">First Name</string>
    <string name="placeholder_firstname">Example: Taha</string>
    <string name="label_lastname">Last Name</string>
    <string name="placeholder_lastname">Example: Hamifar</string>
    <string name="label_email">Email Address</string>
    <string name="placeholder_email">Example: johndoe@gmail.com</string>
    <string name="label_confirm_password">Retype Password</string>
    <string name="placeholder_confirm_password">********</string>
    <string name="button_signup">Register</string>
    <string name="button_account_back">Already have an account? Login here</string>

    <!-- Start Activity-->
    <string name="start_title">Start Your Journey</string>
    <string name="start_subtitle1">Every big step start with small step.</string>
    <string name="start_subtitle2">Note your first idea and start</string>
    <string name="start_subtitle3">your journey!</string>

    <!-- Note Activity-->
    <string name="note_title">Title</string>
    <string name="note_desc">Feel Free to Write Here...</string>


</resources>
